# vision-ai-thinedge-plugin

./: .gitignore  .pylintrc  README.md  justfile  pyproject.toml
.github/workflows/: build.yaml  pr.yaml
rpi-vision-ai-processor/DEBIAN/: control  postinst  postrm  prerm
rpi-vision-ai-processor/etc/tedge/operations/c8y/: c8y_ActivateModel.template  c8y_ImageCapture.template  c8y_VideoCapture.template
rpi-vision-ai-processor/etc/tedge/plugins/vai-plugin/: camera_config.yaml  plugin_config.yaml  rpi_vision_ai_processor_logging.conf  vision_ai_mapper_logging.conf
rpi-vision-ai-processor/etc/tedge/plugins/vai-plugin/go2rtc/: go2rtc.yaml
rpi-vision-ai-processor/etc/tedge/plugins/vai-plugin/model/default/: metadata.yaml
rpi-vision-ai-processor/etc/tedge/sm-plugins/: rpk
rpi-vision-ai-processor/opt/rpivisionai/: mjpeg_server.py  models.py  overlay_stream.py  pyproject.toml  rpi_vision_ai_processor.py  vision_ai_mapper.py
rpi-vision-ai-processor/opt/rpivisionai/tests/: test_rpi_vision_ai_processor.py  test_vision_ai_mapper.py
rpi-vision-ai-processor/opt/rpivisionai/vision_ai_thinedge_plugin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rpi-vision-ai-processor/usr/lib/systemd/system/: go2rtc.service  rpi-vision-ai-processor.service  vision-ai-mapper.service
tests/: pyproject.toml  test_rpi_vision_ai_processor.py  test_vision_ai_mapper.py
tests/resources/: test_mapper_logging.conf
