[project]
name = "rpivisionai"
version = "0.1.0"
description = ""
authors = [
    {name = "Cumulocity GmbH"}
]
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
  "modlib"
]

[tool.uv.sources]
modlib={ git= "https://github.com/SonySemiconductorSolutions/aitrios-rpi-application-module-library", tag="v1.1.1" }

[[tool.uv.index]]
name="pywheel"
url="https://www.piwheels.org/simple"

[tool.uv]
#provided as debian dependency
override-dependencies = [
  "numpy; sys_platform == 'never'",
  "requests; sys_platform == 'never'",
  "opencv-python; sys_platform == 'never'"
]
